Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     
     <main>
         <header>
-            <h1>Título 1</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>PHP</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, nobis omnis. Sed, ipsam reiciendis animi praesentium error delectus vitae velit iusto, nam tempore similique, quis cupiditate beatae illo eaque! Eius.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>MySQL</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusantium quasi maiores qui quisquam alias minus? Sequi voluptatibus voluptates saepe deserunt fugit natus repudiandae dolore, totam, quisquam quidem minima ipsa!</p>
         </article>
 
     </main>
